samples/_failures_safe/1761198871_8e95aa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b0ae388d.c: In function ‘main’:
./samples/SAFE/__tmp_b0ae388d.c:156:33: error: expected ‘]’ at end of input
  156 |     if (len > 0 && input[len - 1
      |                                 ^
      |                                 ]
./samples/SAFE/__tmp_b0ae388d.c:156:5: error: expected declaration or statement at end of input
  156 |     if (len > 0 && input[len - 1
      |     ^~
